--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,7 +2,7 @@ body {
   background: black;
   color: white;
   text-align: center;
-  padding: 5% 10% 0 10%;;
+  padding: 2% 5% 0 5%;;
 }
 img {
   border: 2px solid pink;
@@ -10,26 +10,33 @@ img {
   max-width:256px;
 }
 
+.container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.flex {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  width: 100%
+}
+
+.ele {
+  font-family: "Times New Roman";
+  font-size: 1.5rem;
+  width: 20%;
+  font-weight: normal;
+}
+
 .name {
   font-family: "Helvetica";
   font-weight: bold;
-  font-size: 2rem;
-  margin: 0.2rem;
 }
 
-.nationality {
-  font-family: "Times New Roman";
-  font-weight: normal;
-  font-size: 1.5rem;
-  margin: 0.4rem 0;
-}
-
-.works {
-  font-family: "Times New Roman";
-  font-weight: normal;
-  font-size: 1.5rem;
+.review {
   font-style: italic;
-  margin: 0.4rem 0;
 }
 
 .footer {
