--- a/templates/home.html
+++ b/templates/home.html
@@ -8,12 +8,16 @@
   </head>
   <body>
   <h1>Silver</h1>
-  <img src="../static/1570663126377.png">
+  <img src="../static/1570663126377.png"><br>
+    <div class="container">
     {% for author in authors %}
-      <h1 class="name">{{author.authorname}}</h1>
-      <span class="nationality">{{author.bookname}}</span><br>
-      <span class="works">{{ author.review }}</span>
+      <div class="flex">
+      <span class="name ele">{{author.authorname}}</span>
+      <span class="book ele">{{author.bookname}}</span>
+      <span class="review ele">{{ author.review }}</span>
+      </div>
     {% endfor %}
+    </div>
   <div class="footer">
     <span class="tag">© 2024 A ZOZ Brigade Production</span>
   </div>
