--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,13 +1,39 @@
 body {
   background: black;
   color: white;
+  height: 100%;
   text-align: center;
-  padding: 2% 5% 0 5%;;
+  margin: 0;
+  padding: 0;
 }
+.nav {
+  height: 10%;
+  display:flex;
+  margin: 1rem;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.navlist {
+  list-style: none;
+  width: -moz-available;
+  width: -webkit-fill-available;
+  width: stretch;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.navlist li {
+  font-family: "Courier New", monospace;
+  font-size: 1.2rem;
+}
+
 img {
-  border: 2px solid pink;
-  max-height:256px;
-  max-width:256px;
+  border: 1px solid pink;
+  max-height: 100px;
+  max-width: 100px;
+  float: left;
 }
 
 .container {
@@ -25,7 +51,7 @@ img {
 
 .ele {
   font-family: "Times New Roman";
-  font-size: 1.5rem;
+  font-size: 1rem;
   width: 25%;
   font-weight: normal;
 }
@@ -37,6 +63,21 @@ img {
 
 .review {
   font-style: italic;
+}
+
+.btn {
+  text-decoration: none;
+  color: white;
+  border: 1px solid white;
+  padding: 8px;
+  max-width: fit-content;
+  font-size: 1rem;
+  transition: all 0.5s ease-in-out;
+}
+
+.btn:hover {
+  background: white;
+  color: black;
 }
 
 .footer {
