More template shifting

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,17 +1,8 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="static/css/style.css">
+{% include 'top.html' %}
     <title>Silver</title>
   </head>
   <body>
     {% include 'nav.html' %}
-    <!-- <div>
-      <img src="../static/1570663126377.png">
-      <h1>Silver</h1>
-    </div> -->
     <div class="container">
     {% for author in authors %}
       <div class="flex">
