--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,10 +1,21 @@
+:root {
+  --accent: var(pink);
+}
 body {
   background: black;
+  accent-color: pink;
   color: white;
+  font-family: "Playfair Display";
   height: 100%;
   text-align: center;
   margin: 0;
   padding: 0;
+  scroll-behavior: smooth;
+}
+
+a {
+  text-decoration: none;
+  color: white;
 }
 .nav {
   height: 10%;
@@ -12,6 +23,7 @@ body {
   margin: 1rem;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
 }
 
 .navlist {
@@ -25,9 +37,18 @@ body {
 }
 
 .navlist li {
-  font-family: "Courier New", monospace;
+  font-family: "Playfair Display", monospace;
   font-size: 1.2rem;
 }
+
+.navlink {
+  padding: 0.5rem;
+  transition: all 1s;
+}
+.navlink:hover {
+  color: pink;
+  background: #333;
+ }
 
 img {
   border: 1px solid pink;
@@ -44,21 +65,23 @@ img {
   margin: 0 1rem;
   background: #1f1f1f;
   border: 1px solid pink;
+  max-width: fit-content;
 }
 
 .flex {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  width: 100%
+  align-items: center;
+  width: 100%;
+  margin-bottom: 2rem;
 }
 
 .ele {
   font-family: "Times New Roman";
   font-size: 1rem;
-  width: 25%;
+  width: 20%;
   font-weight: normal;
-  margin-bottom: 1rem;
 }
 
 .name {
@@ -66,13 +89,12 @@ img {
   font-weight: bold;
 }
 
-.review {
+.blurb {
   font-style: italic;
+  width: 30%;
 }
 
 .btn {
-  text-decoration: none;
-  color: white;
   border: 1px solid white;
   padding: 8px;
   max-width: fit-content;
