--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,3 +1,3 @@
 <div class="footer">
-<span class="tag">© 2024 A ZOZ Brigade Production</span>
+<span class="tag">© 2024 A ZOZ Brigade Production | version 0.1 (20.02)</span>
 </div>
