--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,9 +1,9 @@
 <div class="nav">
-  <img class="rakka" src="../static/1570663126377.png">
+  <a  href="/"><img class="rakka" src="../static/1570663126377.png"></a>
   <ul class="navlist">
-    <li>Add New</li>
-    <li>Feedback</li>
-    <li>About</li>
-    <li>Login</li>
+    <li><a href="/new" class="navlink">New</a></li>
+    <li><a href="/feedback" class="navlink">Feedback</a></li>
+    <li><a href="/about" class="navlink">About</a></li>
+    <li><a href="/login" class="navlink">Login</a></li>
   </ul>
 </div>
