Added review support and cosmetic changes

--- a/templates/home.html
+++ b/templates/home.html
@@ -8,8 +8,11 @@
       <div class="flex">
       <span class="name ele">{{author.bookname}}</span>
       <span class="author ele">{{author.authorname}}</span>
-      <span class="blurb ele">{{ author.blurb }}</span>
-      <span class="ele"><a href="/book/{{author['id']}}" type="button" class="btn">Details</a></span>
+      <span class="blurb ele">{{author.blurb}}</span>
+      <div class="buttondiv">
+      <a href="/book/{{author['id']}}" type="button" class="btn">Details</a>
+      <a href="/book/{{author['id']}}/reviews" type="button" class="btn">Read Reviews</a>
+      </div>
       </div>
     {% endfor %}
     </div>
