--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,5 +1,5 @@
 <div class="nav">
-  <a  href="/"><img class="rakka" src="../static/1570663126377.png"></a>
+  <a  href="/"><img src= "{{url_for('static', filename='1570663126377.png')}}" ></a>
   <ul class="navlist">
     <li><a href="/new" class="navlink">New</a></li>
     <li><a href="/feedback" class="navlink">Feedback</a></li>
