--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,9 +1,20 @@
 :root {
-  --accent: var(pink);
+  --accpink: #ff8298;
 }
+
+::-moz-selection {
+  color: white;
+  background-color: var(--accpink);
+}
+
+::selection {
+  color: white;
+  background-color: var(--accpink);
+}
+
 body {
   background: black;
-  accent-color: pink;
+  accent-color:  var(--accpink);
   color: white;
   font-family: "Playfair Display";
   height: 100%;
@@ -61,27 +72,28 @@ img {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  padding: 2rem;
   margin: 0 1rem;
+  padding: 0.5rem;
   background: #1f1f1f;
   border: 1px solid pink;
-  max-width: fit-content;
 }
 
 .flex {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: space-around;
   align-items: center;
   width: 100%;
   margin-bottom: 2rem;
+  min-height: 200px;
 }
 
 .ele {
   font-family: "Times New Roman";
   font-size: 1rem;
-  width: 20%;
+  /* width: 20%; */
   font-weight: normal;
+  display: inline-block;
 }
 
 .name {
@@ -92,6 +104,14 @@ img {
 .blurb {
   font-style: italic;
   width: 30%;
+}
+
+.buttondiv {
+  display:flex;
+  flex-direction:row;
+  justify-content:space-around;
+  align-items: center;
+  gap: 1rem;
 }
 
 .btn {
@@ -107,6 +127,29 @@ img {
   color: black;
 }
 
+#review_form {
+  border: 1px solid pink;
+  width: 90%;
+  margin: 10px auto;
+  padding: 1rem 0;
+}
+
+.form_ele {
+  padding: 0.5rem;
+  color: pink;
+  margin: 1rem;
+  border: 1px dashed pink;
+  width: 80%;
+}
+#review_title {
+  background: transparent;
+  height: 1rem;
+}
+#review_text {
+  background: rgba(255, 255, 255, 0.05);
+  height: 4rem;
+}
+
 .footer {
   height: 100px;
   line-height: 100px;
@@ -118,4 +161,16 @@ img {
   display: inline-block;
   vertical-align: middle;
   line-height: normal;
+}
+
+@media only all and (max-width: 900px) {
+  .ele {
+    width: 50%;
+  }
+  .author, .blurb {
+    display: none;
+  }
+  .buttondiv {
+    flex-direction: column;
+  }
 }
