--- a/templates/book.html
+++ b/templates/book.html
@@ -4,8 +4,14 @@
   <body>
     {% include 'nav.html' %}
     <div class="container">
-    <span>{{book.authorname}}</span>
-    <p>{{book.blurb}}</p>
+      <span>{{book.authorname}}</span>
+      <p>{{book.blurb}}</p>
+      <form id="review_form" action="/book/{{book['id']}}/review" method="post">
+      <span>Submit new review</span>
+      <input type="text" name="title" class="form_ele" id="review_title" required placeholder="title"><br>
+      <textarea name="review_content" class="form_ele" id="review_text" required placeholder="Write something..."></textarea><br>
+      <input type="submit">
+      </form>
     </div>
     {% include 'footer.html' %}
   </body>
